# AionCore

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  CHANGELOG.md  Cargo.toml  justfile  release-notes.md  release-please-config.json
crates/aionui-ai-agent/: Cargo.toml
crates/aionui-ai-agent/src/: acp_agent.rs  acp_routes.rs  acp_service.rs  agent_runtime.rs  agent_task.rs  aionrs_agent.rs  auxiliary_routes.rs  backend_output_sink.rs  cli_process.rs  connection_test_routes.rs  connection_test_service.rs  factory.rs  first_message_injector.rs  gemini_agent.rs  idle_scanner.rs  lib.rs  middleware.rs  nanobot_agent.rs  openclaw_agent.rs  registry.rs  registry_tests.rs  remote_agent.rs  remote_agent_routes.rs  remote_agent_service.rs  runtime_status.rs  service.rs  session_context.rs  skill_manager.rs  task_manager.rs  types.rs
crates/aionui-ai-agent/src/api_client/: anthropic.rs  client.rs  gemini.rs  mod.rs
crates/aionui-ai-agent/src/capability/: backend_output_sink.rs  backend_protocol_sink.rs  cli_process.rs  first_message_injector.rs  mod.rs  skill_manager.rs  team_guide_prompt.rs
crates/aionui-ai-agent/src/capability/cli_process/: mod.rs  spawn_legacy.rs  spawn_sdk.rs  (+1 more)
crates/aionui-ai-agent/src/factory/: acp.rs  acp_assembler.rs  aionrs.rs  mod.rs
crates/aionui-ai-agent/src/manager/: aionrs.rs  mod.rs  nanobot.rs
crates/aionui-ai-agent/src/persistence/: acp_session_sync.rs
crates/aionui-ai-agent/src/protocol/: acp.rs  cli_detect.rs  custom_agent_probe.rs  error.rs  mod.rs  send_error.rs
crates/aionui-ai-agent/src/routes/: acp_probe.rs  agent.rs  conversation_ops.rs  mod.rs  session_ops.rs
crates/aionui-ai-agent/src/services/: agent.rs  custom.rs  mod.rs
crates/aionui-ai-agent/src/shared_kernel/: mod.rs
crates/aionui-ai-agent/tests/: acp_agent_integration.rs  agent_availability_integration.rs  agent_types_integration.rs  api_client_integration.rs  connection_test_integration.rs  factory_provider_integration.rs  middleware_integration.rs  skill_manager_integration.rs
crates/aionui-channel/: Cargo.toml
crates/aionui-channel/src/: action.rs  channel_settings.rs  lib.rs  manager.rs  message_service.rs  orchestrator.rs  pairing.rs  plugin.rs  routes.rs  session.rs  stream_relay.rs  types.rs
crates/aionui-channel/tests/: dingtalk_integration.rs  lark_integration.rs  manager_integration.rs  message_service_integration.rs  orchestrator_test.rs  pairing_integration.rs  session_action_integration.rs  stream_relay_test.rs  telegram_integration.rs  weixin_integration.rs
crates/aionui-conversation/: Cargo.toml
crates/aionui-conversation/src/: acp_error_recovery.rs  agent_health_policy.rs  convert.rs  error.rs  lib.rs  message_cursor.rs  message_persistence.rs  routes.rs  routes_static_file.rs  runtime_state.rs  service.rs  service_ops.rs  service_test.rs  session_context.rs  skill_resolver.rs  state.rs  stream_relay.rs  turn_continuation_policy.rs  turn_orchestrator.rs  turn_recovery_policy.rs
crates/aionui-conversation/src/service_test/: acp_error_recovery_test.rs
crates/aionui-conversation/tests/: acp_tool_call_persistence.rs  conversation_crud.rs  conversation_extended.rs  stream_relay_tips.rs  stream_relay_tool_call.rs
crates/aionui-extension/: Cargo.toml
crates/aionui-extension/src/: constants.rs  dependency.rs  error.rs  external_paths.rs  hub_routes.rs  lib.rs  lifecycle.rs  loader.rs  manifest.rs  permission.rs  registry.rs  registry_helpers.rs  routes.rs  skill_routes.rs  skill_service.rs  state.rs  template.rs  types.rs  types_tests.rs  watcher.rs
crates/aionui-extension/src/hub/: index_manager.rs  installer.rs
crates/aionui-extension/src/resolvers/: acp_adapter.rs  agent.rs  assistant.rs  channel_plugin.rs  mcp_server.rs  mod.rs  settings_tab.rs  skill.rs  theme.rs  webui.rs
crates/aionui-extension/tests/: assistant_dispatch_test.rs  contribution_resolution_test.rs  dependency_management_test.rs  extension_loading_test.rs  hub_test.rs  lifecycle_hooks_test.rs  manifest_validation_test.rs  permission_system_test.rs  registry_test.rs  skill_integration_test.rs  skill_service_materialize.rs  state_persistence_test.rs  template_resolution_test.rs
crates/aionui-file/: Cargo.toml
crates/aionui-file/src/: browse.rs  lib.rs  path_safety.rs  routes.rs  service.rs  traits.rs  watch_service.rs  workspace_watcher.rs  workspace_watcher_registry.rs  workspace_watcher_router.rs
crates/aionui-file/src/snapshot_service/: helpers.rs  mod.rs
crates/aionui-file/tests/: directory_browsing.rs  file_management.rs  file_read_write.rs  image_processing.rs  snapshot.rs  zip_packaging.rs
crates/aionui-mcp/: Cargo.toml
crates/aionui-mcp/src/: adapter.rs  error.rs  lib.rs  oauth_service.rs  routes.rs  service.rs  session_injection.rs  sync_service.rs  types.rs
crates/aionui-mcp/src/adapters/: aionrs.rs  aionui.rs  claude.rs  cli_helpers.rs  codebuddy.rs  codex.rs  gemini.rs  iflow.rs  mod.rs  opencode.rs  qwen.rs
crates/aionui-mcp/src/connection_test/: mod.rs  protocol.rs
crates/aionui-mcp/tests/: adapter_integration.rs  connection_test_integration.rs  connection_test_path_resolution_integration.rs  file_adapter_integration.rs  oauth_integration.rs  service_integration.rs  session_injection_integration.rs  sync_integration.rs  types_integration.rs
crates/aionui-runtime/: Cargo.toml  build.rs
crates/aionui-runtime/src/: agent_env.rs  cache.rs  embed.rs  http_client.rs  lib.rs  managed_resources.rs  resolver.rs  shell_env.rs  spawn.rs  test_support.rs
crates/aionui-runtime/src/acp_tool_runtime/: mod.rs  types.rs
crates/aionui-runtime/src/node_runtime/: managed.rs  mod.rs  system.rs  types.rs
crates/aionui-shell/: Cargo.toml
crates/aionui-shell/examples/: stt_stream_smoke.rs
crates/aionui-shell/src/: error.rs  lib.rs  routes.rs  shell.rs  stt.rs  stt_deepgram.rs  stt_openai.rs  stt_stream.rs  stt_stream_deepgram.rs  stt_stream_openai.rs  stt_stream_provider.rs  stt_stream_tls.rs
crates/aionui-shell/tests/: shell_integration.rs  stt_integration.rs  stt_stream_deepgram_integration.rs  stt_stream_openai_integration.rs
(+344 files in other folders)
