[package]
name = "aionui-conversation"
version.workspace = true
edition.workspace = true

[dependencies]
aionui-common.workspace = true
aionui-db.workspace = true
aionui-api-types.workspace = true
aionui-realtime.workspace = true
aionui-auth.workspace = true
aionui-ai-agent.workspace = true
aionui-extension.workspace = true
aionui-mcp.workspace = true
aionui-runtime.workspace = true
axum.workspace = true
base64.workspace = true
regex.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
# Enable the `AgentInstance::Mock` variant so tests can build fake agents
# through the trait-object escape hatch without spawning real CLI processes.
aionui-ai-agent = { workspace = true, features = ["test-support"] }
