[package]
name = "aionui-extension"
version.workspace = true
edition.workspace = true

[dependencies]
aionui-common.workspace = true
aionui-db.workspace = true
aionui-api-types.workspace = true
aionui-realtime.workspace = true
async-trait.workspace = true
axum.workspace = true
dirs.workspace = true
include_dir.workspace = true
semver.workspace = true
notify.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
http-body-util.workspace = true
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
