[package]
name = "aionui-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
aionui-runtime.workspace = true
aionui-common.workspace = true
aionui-db.workspace = true
aionui-api-types.workspace = true
aionui-system.workspace = true
async-trait.workspace = true
dashmap.workspace = true
axum.workspace = true
dirs.workspace = true
thiserror.workspace = true
oauth2.workspace = true
open.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
axum.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
