[package]
name = "aionui-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
dirs.workspace = true
sha2.workspace = true
hex.workspace = true
which.workspace = true
zstd.workspace = true
fs2.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["process", "io-util"] }
semver.workspace = true
reqwest.workspace = true
zip.workspace = true
flate2 = "1"
tar = "0.4"
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
zstd.workspace = true
sha2.workspace = true
hex.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
wait-timeout = "0.2"
