[package]
name = "aionui-shell"
version.workspace = true
edition.workspace = true

[dependencies]
aionui-common.workspace = true
aionui-api-types.workspace = true
aionui-system.workspace = true
aionui-runtime.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
futures-util.workspace = true
open.workspace = true
which.workspace = true
reqwest.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true

[dev-dependencies]
aionui-db.workspace = true
http-body-util.workspace = true
sqlx.workspace = true
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
wiremock.workspace = true
